--- a/app.json
+++ b/app.json
@@ -29,8 +29,9 @@
         {
           "image": "./assets/images/splash.png",
           // "imageWidth": 200,
-          "resizeMode": "cover",
+          "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+          // "backgroundColor": "#2f80ed"
         }
       ]
     ],
