add fetch api constant and sign up to db functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bmV1dHJhbC1zYWlsZmlzaC0zNi5jbGVyay5hY2NvdW50cy5kZXYk
+DATABASE_URL=postgresql://neondb_owner:7vN1tZWlbCiB@ep-dry-unit-a1jr5mii.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+
+EXPO_PUBLIC_SERVER_URL=https://angkol.com/
