--- a/app.json
+++ b/app.json
@@ -19,22 +19,23 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash.png",
-          // "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-          // "backgroundColor": "#2f80ed"
-        }
-      ]
+      ["expo-router", {"origin": "https://angkol.com/"}]
     ],
+    // [
+    //   "expo-router",
+    //   [
+    //     "expo-splash-screen",
+    //     {
+    //       "image": "./assets/images/splash.png",
+    //       "resizeMode": "contain",
+    //       "backgroundColor": "#ffffff"
+    //     }
+    //   ]
+    // ],
     "experiments": {
       "typedRoutes": true
     }
