--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@clerk/clerk-expo": "^2.6.14",
     "@clerk/types": "^4.41.1",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@neondatabase/serverless": "^0.10.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-react-native": "^0.41.0",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
@@ -52,6 +54,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "stripe": "^17.5.0",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.3"
   },
